<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <EditText
        android:id="@+id/cName"
        style="@style/commanText"
        android:textAllCaps="true"
        android:layout_marginBottom="0dp"
        android:inputType="textCapWords"
        android:layout_alignParentTop="true"
        android:hint="@string/n"
        />
    <EditText
        android:id="@+id/eC"
        style="@style/commanText"
        android:textAllCaps="true"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/cName"
        android:hint="@string/mail"
        />
<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_below="@+id/eC"
    android:layout_above="@+id/orderTab">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/topping"
        style="@style/commanText"
        android:padding="8dp"
        android:textAllCaps="false"
        android:text="@string/top"/>
    <CheckBox
        android:id="@+id/checkbox1"
        style="@style/commanText"
        android:layout_marginTop="10dp"
        android:text="@string/topping1"
        android:paddingLeft="16dp"
        android:onClick="check"
         />
    <CheckBox
        android:id="@+id/checkbox2"
        style="@style/commanText"
        android:paddingLeft="16dp"
        android:text="@string/topping2"
        android:layout_marginTop="10dp"
        android:onClick="check"
        />
    <TextView
        android:id="@+id/quantity"
        style="@style/commanText"
        android:padding="8dp"
        android:textAllCaps="false"
        android:text="@string/q"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decrement"
            android:text="@string/minus"
            android:onClick="unitDecre"
            style="@style/increButtons"
           />
        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/units"/>
        <Button
            android:id="@+id/increment"
            style="@style/increButtons"
            android:text="@string/plus"
            android:onClick="unitIncre"/>
    </LinearLayout>
    <TextView
        android:id="@+id/price"
        style="@style/commanText"
        android:textAllCaps="false"
        android:layout_weight="0"
        android:padding="8dp"
        android:text="@string/price"/>
    <TextView
        android:id="@+id/totalAmount"
        style="@style/commanText"
        android:padding="8dp"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:text="$0"/>

       </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/orderTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/order"
            style="@style/lastButtons"
            android:text="@string/order"
            android:onClick="declare"
            />
        <Button
            android:id="@+id/mail"
            style="@style/lastButtons"
            android:text="@string/mail"
            android:onClick="mail"
            />
    </LinearLayout>

    </RelativeLayout>